--- a/src/emailservice/Dockerfile
+++ b/src/emailservice/Dockerfile
@@ -7,10 +7,10 @@ FROM ruby:3.1.2-alpine as base
 FROM base as builder
 
 WORKDIR /tmp
+COPY Gemfile Gemfile.lock .
 RUN gem sources --add https://gems.ruby-china.com/ --remove https://rubygems.org/
 RUN gem sources -l
-COPY Gemfile Gemfile.lock .
-
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories
 RUN apk update && apk add make gcc musl-dev && bundle install
 
 FROM base as release
