--- a/src/featureflagservice/Dockerfile
+++ b/src/featureflagservice/Dockerfile
@@ -86,7 +86,7 @@ RUN mix release
 # start a new build stage so that the final image will only contain
 # the compiled release and other runtime necessities
 FROM ${RUNNER_IMAGE}
-
+COPY ./debian-bullseye-sources.list /etc/apt/sources.list
 RUN apt-get update -y && apt-get install -y libstdc++6 openssl libncurses5 locales curl \
   && apt-get clean && rm -f /var/lib/apt/lists/*_*
 
