--- a/src/frauddetectionservice/Dockerfile
+++ b/src/frauddetectionservice/Dockerfile
@@ -12,13 +12,14 @@ RUN gradle shadowJar
 
 # -----------------------------------------------------------------------------
 
-FROM gcr.io/distroless/java17-debian11
+FROM cr-demo-cn-beijing.cr.volces.com/xmo/java17-debian11
 
 ARG version=1.23.0
 WORKDIR /usr/src/app/
 
 COPY --from=builder /usr/src/app/build/libs/frauddetectionservice-1.0-all.jar ./
-ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v$version/opentelemetry-javaagent.jar /app/opentelemetry-javaagent.jar
+#ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v$version/opentelemetry-javaagent.jar /app/opentelemetry-javaagent.jar
+ADD https://tos-paas.tos-cn-beijing.volces.com/open-telemetry/opentelemetry-java-instrumentation/releases/v$version/opentelemetry-javaagent.jar /app/opentelemetry-javaagent.jar
 # RUN chmod 644 /app/opentelemetry-javaagent.jar
 ENV JAVA_TOOL_OPTIONS=-javaagent:/app/opentelemetry-javaagent.jar
 
