--- a/src/paymentservice/Dockerfile
+++ b/src/paymentservice/Dockerfile
@@ -7,7 +7,7 @@ FROM node:16-alpine AS build
 WORKDIR /usr/src/app/
 
 COPY ./src/paymentservice/package*.json ./
-
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories
 RUN apk add --no-cache python3 make g++ && npm ci --omit=dev
 
 # -----------------------------------------------------------------------------
