--- a/src/frontendproxy/Dockerfile
+++ b/src/frontendproxy/Dockerfile
@@ -3,7 +3,7 @@
 
 
 FROM envoyproxy/envoy-dev:8c202194ac6a2cb781eb6ce27d924b379b1e787f
-COPY debian-bullseye-sources.list /etc/apt/sources.list
+#COPY debian-bullseye-sources.list /etc/apt/sources.list
 RUN apt-get update && apt-get install -y gettext-base && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 USER envoy
