--- a/src/adservice/build.gradle
+++ b/src/adservice/build.gradle
@@ -7,8 +7,11 @@ plugins {
 }
 
 repositories {
-    mavenCentral()
-    mavenLocal()
+//    mavenCentral()
+//    mavenLocal()
+    maven {
+        url "https://maven.aliyun.com/nexus/content/groups/public"
+    }
 }
 
 description = 'Ad Service'
